--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "short_name": "PRENDAS",
     "name": "Espero te prendas",
     "start_url": "/ecommerce/",
-    "background_color": "#ffffff",
+    "background_color": "#f070ea",
     "theme_color": "#f070ea",
     "description": "Ecommerce de ejemplo PWA",
     "scope": "/ecommerce/",
