--- a/manifest.json
+++ b/manifest.json
@@ -10,57 +10,57 @@
     "orientation": "portrait",
     "icons": [
         {
-            "src": "ecommerce/images/clothes-64.png",
+            "src": "./images/clothes-64.png",
             "type": "image/png",
             "sizes": "64x64"
         },
         {
-            "src": "ecommerce/images/clothes-96.png",
+            "src": "./images/clothes-96.png",
             "type": "image/png",
             "sizes": "96x96"
         },
         {
-            "src": "ecommerce/images/clothes-144.png",
+            "src": "./images/clothes-144.png",
             "type": "image/png",
             "sizes": "144x144"
         },
         {
-            "src": "ecommerce/images/clothes-192.png",
+            "src": "./images/clothes-192.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "ecommerce/images/clothes-256.png",
+            "src": "./images/clothes-256.png",
             "type": "image/png",
             "sizes": "256x256"
         },
         {
-            "src": "ecommerce/images/clothes-512.png",
+            "src": "./images/clothes-512.png",
             "type": "image/png",
             "sizes": "512x512"
         }
     ],
     "screenshots": [
         {
-            "src": "ecommerce/images/screenshot390x790.png",
+            "src": "./images/screenshot390x790.png",
             "sizes": "3900x790",
             "type": "image/png",
             "form_factor": "mobile"
         },
         {
-            "src": "ecommerce/images/screenshot660x1000.png",
+            "src": "./images/screenshot660x1000.png",
             "sizes": "660x1000",
             "type": "image/png",
             "form_factor": "tablet"
         },
         {
-            "src": "ecommerce/images/screenshot1200x840.png",
+            "src": "./images/screenshot1200x840.png",
             "sizes": "1200x840",
             "type": "image/png",
             "form_factor": "wide"
         },
         {
-            "src": "ecommerce/images/screenshot1600x1000.png",
+            "src": "./images/screenshot1600x1000.png",
             "sizes": "1600x1000",
             "type": "image/png",
             "form_factor": "wide"
