--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
     "short_name": "PRENDAS",
     "name": "Espero te prendas",
     "version": "1.0.1",
-    "start_url": "/ecommerce/",
+    "start_url": "/",
     "background_color": "#f070ea",
     "theme_color": "#f070ea",
     "description": "Espero 'Te Prendas' es una aplicación progresiva de ejemplo, que utiliza la tecnología PWA.",
-    "scope": "/",
+    "scope": "ecommerce/",
     "display": "standalone",
     "orientation": "portrait",
     "icons": [
