--- a/manifest.json
+++ b/manifest.json
@@ -50,8 +50,15 @@
             "label": "Espero te prendas en versión mobile"
         },
         {
-            "src": "./images/screenshot1600x1000.png",
-            "sizes": "1646x1055",
+            "src": "./images/screenshot441x625.png",
+            "sizes": "441x625",
+            "type": "image/png",
+            "form_factor": "narrow",
+            "label": "Espero te prendas en versión mobile"
+        },
+        {
+            "src": "./images/screenshot1623x992.png",
+            "sizes": "1623x992",
             "type": "image/png",
             "form_factor": "wide",
             "label": "Espero te prendas para computadoras de escritorio"
